# freshet

./: BENCHMARK.md  Cargo.toml  DESIGN.md  GAMES.md  README.md  SPEC.md
anchor/: Cargo.toml
anchor/src/: lib.rs
anchor/tests/: bench_cu.rs
core/: Cargo.toml  README.md
core/src/: lib.rs  monoid.rs  partition.rs  state.rs
program/: Cargo.toml
program/src/: error.rs  instructions.rs  layout.rs  lib.rs  security.rs
program/tests/: bench_cu.rs  lifecycle.rs
quasar/: Cargo.toml
quasar/src/: lib.rs
quasar/tests/: bench_cu.rs
royale/: Cargo.toml
royale/src/: lib.rs
royale/tests/: elimination.rs
