[package]
name = "freshet-anchor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Anchor port of the freshet reference settler — for the cross-framework CU benchmark"
publish = false # benchmark port — only the `freshet` core crate is published

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dependencies]
anchor-lang = "=0.32.1"
freshet = { path = "../core", default-features = false }

[dev-dependencies]
mollusk-svm = "0.13.1"
solana-account = "3"
solana-instruction = "3"
solana-pubkey = { version = "4", features = ["curve25519"] }
sha2 = "0.10"
