[package]
name = "freshet-program"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "freshet on-chain program (Pinocchio): a resumable, sharded MapReduce over Solana accounts"
publish = false # reference settler / benchmark target — only the `freshet` core crate is published

[lib]
crate-type = ["lib", "cdylib"]

[lints.rust]
# target_os = "solana" is only known under `cargo build-sbf`; register it so host builds
# of the lib target (for integration tests) don't warn.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dependencies]
pinocchio = "=0.9.2"
pinocchio-system = "=0.4.0"
pinocchio-pubkey = "=0.3.0"
freshet = { path = "../core", default-features = false }

[dev-dependencies]
mollusk-svm = "0.13.1"
solana-account = "3"
solana-instruction = "3"
solana-pubkey = { version = "4", features = ["curve25519"] }
