# Standalone workspace (see the root Cargo.toml `exclude`): Quasar's solana crate version
# requirements conflict with Anchor/mollusk's, so this crate keeps its own lockfile.
[workspace]

[package]
name = "freshet-quasar"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Quasar port of the freshet reference settler — for the cross-framework CU benchmark"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
alloc = []
client = []
debug = []
idl-build = ["quasar-lang/idl-build"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(kani)',
    'cfg(kani_ra)',
] }

[dependencies]
# Quasar is a beta git dependency (not on crates.io); pin to a commit for reproducibility.
quasar-lang = { git = "https://github.com/blueshift-gg/quasar", rev = "a89a9329f05740a20520607608b2b3b78c74f7c4" }
freshet = { path = "../core", default-features = false }

[dev-dependencies]
mollusk-svm = "0.13.1"
solana-account = "3"
solana-instruction = "3"
solana-pubkey = { version = "4", features = ["curve25519"] }
