[package]
name = "freshet-royale"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Battle-royale demo consumer of freshet: a round eliminates every player who didn't act — even offline ones (push-mode, impossible with pull-based claims)"
publish = false # demo consumer — only the `freshet` core crate is published

[lib]
crate-type = ["lib", "cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dependencies]
pinocchio = "=0.9.2"
freshet = { path = "../core", default-features = false }

[dev-dependencies]
mollusk-svm = "0.13.1"
solana-account = "3"
solana-instruction = "3"
solana-pubkey = { version = "4", features = ["curve25519"] }
